Initial implementation of leaderboard for web and edit quiz
Implemented large parts of editing the declare allegiance quiz.

--- a/web/src/app/app.html
+++ b/web/src/app/app.html
@@ -234,7 +234,7 @@
         listenToPlayer_() {
           this.gettingPlayer = true;
           let self = this;
-          this.bridge.getPlayer(this.userId, this.game.id).then(player => {
+          this.bridge.getPlayerByUserId(this.userId, this.game.id).then(player => {
             if (player) {
               self.playerId = player.id
             }
